--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-query": "^5.67.2",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
