--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tanstack/react-query": "^5.67.2",
+    "canvas": "^3.1.0",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
