--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tanstack/react-query": "^5.67.2",
-    "canvas": "^3.1.0",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
+    "pdfjs-dist": "^3.4.120",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "null-loader": "^4.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
